# basic-renderer

./: CMakeLists.txt  Makefile  README.md  geometry.cpp  geometry.h  main.cpp  model.h  obj_loader.h  tgaimage.cpp  tgaimage.h
example/: obj_loader_example.cpp
